# crispii_errors

./: Cargo.toml  README.md
src/: crispii_error.rs  enums.rs  impossible_operation_error.rs  invalid_argument_error.rs  lib.rs  official_crispii_error.rs  structs.rs  traits.rs
src/enums/: crispii_error.rs
src/structs/: impossible_operation_error.rs  invalid_argument_error.rs
src/traits/: crispii_error.rs
