[package]
name = "crispii_errors"
version = "0.1.3"
edition = "2024"
rust-version = "1.85.0"
description = "Errors intended for use in Crispii"
readme = "README.md"
repository = "https://github.com/stephen-paton/crispii_errors"
authors = ["Stephen Paton <69050696+stephen-paton@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
keywords = ["crispii", "errors"]
